
Changes in Version 0.6-5 (in development)

 o new panel functions panel.smoother() and panel.quantile().
   The latter requires the quantreg package.

 o expanded xyplot.ts() and moved it to the lattice package.

 o layer() rewritten and now has several new arguments.
   New convenience functions layer_(), glayer(), etc.

 o new functions theEconomist.theme() and asTheEconomist().

 o improved handling of colours in panel.xblocks().
   Added several more examples to the help page.

 o fixed panel.xblocks() to handle cases of no missing data.

Changes in Version 0.6-4

 o as.layer() gains arguments x.same and y.same.

Changes in Version 0.6-2

 o new functions 'panel.xblocks', 'panel.qqmath.tails',
   'panel.xyarea' and 'panel.qqmath.xyarea'.

 o added explicit 'layout' argument to 'marginal.plot'
   (was clobbered by the default NULL in 'c.trellis').

 o 'c.trellis' handles 'subscripts' argument to prepanel functions.

Changes in Version 0.6-1

 o fixed 'layout' argument to 'xyplot.list' and 'c.trellis'.

Changes in Version 0.6-0

 o new function xyplot.list, to create and merge multiple plots
   (and not just xyplots).

 o c.trellis will now set same scales properly when x/y.same=TRUE.

 o new function doubleYScale, to easily overlay two plot series.

 o new functions panel.lmlineq and panel.ablineq for line equations.

 o marginal.plot handles non-syntactic variable names;
   also now coerces to data.frame (so e.g. works with a matrix).

 o changes to default axis style in marginal.plot.

 o new dataset EastAuClimate.

Changes in Version 0.5-4

 o marginal.plot now handles table objects sensibly.

 o marginal.plot now applies 'subset' to 'groups', as it should.

Changes in Version 0.5-3

 o improvements to marginal.plot including support for groups.

 o fix to marginal.plot: failed with only numeric variables.

 o fix to panel.voronoi (with use.tripack = FALSE):
   wrong colors were used when xlim/ylim enclosed a data subset.
